--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,3 +2,34 @@ ja:
   time:
     formats:
       default: "%Y/%m/%d %H:%M"
+
+  errors:
+    messages:
+      already_confirmed: "was already confirmed, please try signing in"
+      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
+      expired: "has expired, please request a new one"
+      not_found: "not found"
+      not_locked: "was not locked"
+      not_saved:
+        one: "1 error prohibited this %{resource} from being saved:"
+        other: "%{count} errors prohibited this %{resource} from being saved:"
+
+  activerecord:
+    errors:
+      models:
+        post:
+          attributes:
+            subtitle:
+              blank: "が入力されていません。"
+
+    attributes:
+      user:
+        current_password: "現在のパスワード"
+        name: 名前
+        email: "メールアドレス"
+        password: "パスワード"
+        password_confirmation: "確認用パスワード"
+        remember_me: "次回から自動的にログイン"
+      post:
+        subtitle: "サブタイトル（必須)"
+        body: "投稿内容（必須）"
