[update]layout_Indent

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -32,11 +32,11 @@ ja:
         introduction: "自己紹介"
         avatar: "アカウント画像"
       post:
-        title: "サイト名"
+        title: "ポートフォリオ名"
         subtitle: "サブタイトル"
-        post_image: "作品画像"
-        body: "ポートフォリオ紹介"
-        portfolio_url: "作品URL"
+        post_image: "ポートフォリオ画像"
+        body: "紹介文"
+        portfolio_url: "ポートフォリオURL"
         source_code_url: "ソースコードURL"
         message: "ひとこと"
         development_environment_text: "開発環境"
